# chibihash_cpp

./: CMakeLists.txt  README.md  chibihash_cppConfig.cmake.in  test.cpp
include/chibihash/: chibihash64.hh
